# aqualog

./: .env.example  .gitignore  .pre-commit-config.yaml  AUTH_README.md  Dockerfile  README.md  cli.py  data_generator.py  main.py  prompt.md  pyproject.toml  requirements.in  requirements.txt
.kiro/specs/freediving-management-system/: design.md  requirements.md  tasks.md
.streamlit/: config.json  credentials.json  encryption.key
app/: __init__.py
app/auth/: __init__.py  db_auth.py
app/pages/: __init__.py  admin_panel.py  cooper_tests.py  dashboard.py  indoor_trials.py  landing.py  login.py  members.py
app/utils/: __init__.py  auth.py  auth_utils.py  config.py
config/: __init__.py
data/: aqualog.duckdb.wal
db/: __init__.py  connection.py  models.py  queries.py  schema.sql  utils.py
scripts/: __init__.py  cli.py  data_generator.py
tests/: __init__.py
